plugins {
    id 'base'
}

group = mod_group_id
version = mod_version

subprojects {
    repositories {
        mavenCentral()
    }

    pluginManager.withPlugin('java') {
        java {
            toolchain.languageVersion = JavaLanguageVersion.of(17)
        }

        tasks.withType(JavaCompile).configureEach {
            options.encoding = 'UTF-8'
        }
    }
}
